fix header spacing

--- a/public/css/index.less
+++ b/public/css/index.less
@@ -96,7 +96,7 @@ footer {
 }
 
 .nav>li>a {
-    padding: 20px 12px;
+    padding: 20px 10px;
 }
 /*
  * Off Canvas
